// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toaster snapshot of error toast 1`] = `
<body>
  <div
    id="ventura-toasters"
  >
    <span
      class="toastManagerContainer"
    >
      <div
        class="toastContainer"
        data-state="entering"
        style="height: 0px; margin-bottom: 0px;"
      >
        <div
          class="toastPadding"
        >
          <div
            class="ventura alert alertError"
          >
            <div
              class="contentContainer closable"
            >
              <svg
                class="icon iconError"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <line
                  x1="12"
                  x2="12"
                  y1="8"
                  y2="12"
                />
                <line
                  x1="12"
                  x2="12.01"
                  y1="16"
                  y2="16"
                />
              </svg>
              <span
                class="message"
              >
                Message
              </span>
            </div>
            <div
              class="closeContainer"
            >
              <svg
                class="closeAlert"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <line
                  x1="18"
                  x2="6"
                  y1="6"
                  y2="18"
                />
                <line
                  x1="6"
                  x2="18"
                  y1="6"
                  y2="18"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </span>
  </div>
  <div>
    <button
      class="ventura button typePrimary"
      data-testid="button-toaster"
      name="toaster"
      type="button"
    >
      <span
        class="label"
      >
        Trigger toaster
      </span>
    </button>
  </div>
</body>
`;

exports[`Toaster snapshot of success toast 1`] = `
<body>
  <div
    id="ventura-toasters"
  >
    <span
      class="toastManagerContainer"
    >
      <div
        class="toastContainer"
        data-state="entering"
        style="height: 0px; margin-bottom: 0px;"
      >
        <div
          class="toastPadding"
        >
          <div
            class="ventura alert alertSuccess"
          >
            <div
              class="contentContainer closable"
            >
              <svg
                class="icon iconSuccess"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M22 11.08V12a10 10 0 1 1-5.93-9.14"
                />
                <polyline
                  points="22 4 12 14.01 9 11.01"
                />
              </svg>
              <span
                class="message"
              >
                Message
              </span>
            </div>
            <div
              class="closeContainer"
            >
              <svg
                class="closeAlert"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <line
                  x1="18"
                  x2="6"
                  y1="6"
                  y2="18"
                />
                <line
                  x1="6"
                  x2="18"
                  y1="6"
                  y2="18"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="toastContainer"
        data-state="entering"
        style="height: 0px; margin-bottom: 0px;"
      >
        <div
          class="toastPadding"
        >
          <div
            class="ventura alert alertError"
          >
            <div
              class="contentContainer closable"
            >
              <svg
                class="icon iconError"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <line
                  x1="12"
                  x2="12"
                  y1="8"
                  y2="12"
                />
                <line
                  x1="12"
                  x2="12.01"
                  y1="16"
                  y2="16"
                />
              </svg>
              <span
                class="message"
              >
                Message
              </span>
            </div>
            <div
              class="closeContainer"
            >
              <svg
                class="closeAlert"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <line
                  x1="18"
                  x2="6"
                  y1="6"
                  y2="18"
                />
                <line
                  x1="6"
                  x2="18"
                  y1="6"
                  y2="18"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </span>
  </div>
  <div>
    <button
      class="ventura button typePrimary"
      data-testid="button-toaster"
      name="toaster"
      type="button"
    >
      <span
        class="label"
      >
        Trigger toaster
      </span>
    </button>
  </div>
</body>
`;
